feat(jvmlog): GC tuning recommendations engine and ZGC generational breakdown
- jvmlog-gc-recommendations: SQL-driven tuning advisor (GCeasy-style) — 6 diagnostic
  categories (throughput, P99, Full GC, System.gc(), allocation failures, GC frequency)
  each with severity rating (Critical/Warning/Info/OK) and specific JVM flag suggestions
- jvmlog-zgc-generational: ZGC generational breakdown for JDK 21+ — Young vs Old
  collection cycle counts, total/avg concurrent time, max pause per generation

Template gains 2 new cells (gc-recommendations, zgc-generational); 64 views total, 43 tests.